<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="8dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_saludo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/str_title"
        android:textColor="#2196F3"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="8dp" />

    <ImageView
        android:id="@+id/logo"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_launcher"
        android:layout_centerInParent="true"
        android:layout_below="@+id/txt_saludo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_below="@id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/button1"
            android:layout_margin="8dp"
            android:text="@string/btn1_txt"
            android:layout_width="0dp"
            android:textColor="#FFFFFF"
            android:layout_weight="1"
            android:background="@color/color_h"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button2"
            android:layout_margin="8dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@color/color_m"
            android:textColor="#FFFFFF"
            android:layout_height="wrap_content"
            android:text="@string/btn2_txt"/>
    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <RatingBar
            android:id="@+id/rating"
            android:numStars="5"
            android:stepSize=".5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/txt_nombre"
            android:layout_marginTop="16dp"
            android:hint="@string/hint_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <SeekBar
            android:id="@+id/seek"
            android:max="10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>
